--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
 		"vdev": "vite --input-type=module",
 		"wpbuild": "wp-scripts build --output-path=assets/block",
 		"wpstart": "wp-scripts start --output-path=assets/block",
-		"dev": "concurrently \"vite\" \" npm run wpstart\" && npm run build",
+		"devx": "concurrently \"vite\" \" npm run wpstart\" && npm run build",
+		"dev": "concurrently \"vite\" \" npm run wpstart\"",
 		"build": "concurrently \"vite build\" \" npm run wpbuild\"",
+		"watch": "concurrently \"vite build\" \" npm run wpbuild\"",
 		"dev-build": "vite build",
 		"preview": "vite preview",
 		"zip": "npm run build && node bundle.mjs",
 		"zip-full": "vite build && node bundle-full.mjs"
 	},
 	"devDependencies": {
-		"@wordpress/scripts": "^27.8.0",
+		"@vitejs/plugin-react": "^4.3.1",
+		"@wordpress/scripts": "^19.2.4",
 		"concurrently": "^8.2.2",
 		"dir-archiver": "^2.1.0",
 		"sass": "^1.72.0",
@@ -28,6 +31,9 @@
 	"dependencies": {
 		"@wordpress/block-editor": "^12.25.0",
 		"@wordpress/blocks": "^12.34.0",
-		"@wordpress/editor": "^13.35.0"
+		"@wordpress/editor": "^13.35.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-query": "^3.39.3"
 	}
 }
